natgw.tf
resource "aws_nat_gateway" "natgw" {
  allocation_id = aws_eip.myeip.id
  subnet_id     = aws_subnet.main_public[0].id

  tags = {
    "Name" = "gw NAT"
  }

  # To ensure proper ordering, it is recommended to 
  # add an explicit dependency on the IG for the VPC 

  depends_on = [
    aws_internet_gateway.gw
  ]
}
